--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 body{
     margin: 0;
     padding: 0;
@@ -7,8 +6,7 @@ body{
 
 /** header **/
 nav{
-    background-color: lightgray;
-
+    background-color: lightskyblue;
 }
 
 .nav-item a{
@@ -30,12 +28,13 @@ nav{
 
 
 /** footer **/
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: lightskyblue;
+}
 
-
-
-
-
-
-
-
-
+.footer-copyright {
+    background-color: #66c1f9;
+}
