--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Varela Round', sans-serif;
+    position: relative;
+    min-height: 100%;
+}
+
+html{
+
 }
 
 /** header **/
@@ -23,12 +29,17 @@ nav{
 /** inhoud **/
 #inhoud{
     padding: 20px;
+    /*min-height: 80vh;*/
+}
+
+.wrapper{
+    height: 100vh;
 }
 
 /** footer **/
 footer {
-    position: absolute;
-    bottom: 0;
+    /*position: absolute;*/
+    /*bottom: 0;*/
     width: 100%;
     background-color: lightskyblue;
 }
