--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,12 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Varela Round', sans-serif;
-    position: relative;
-    min-height: 100%;
+    margin-bottom: 180px;
 }
 
 html{
-
+    position: relative;
+    min-height: 100%;
 }
 
 /** header **/
@@ -32,16 +32,17 @@ nav{
     /*min-height: 80vh;*/
 }
 
-.wrapper{
-    height: 100vh;
-}
+
 
 /** footer **/
-footer {
-    /*position: absolute;*/
-    /*bottom: 0;*/
+#voetnoot {
+    position: absolute;
+    bottom: 0;
     width: 100%;
     background-color: lightskyblue;
+    height: 180px;
+    /*line-height: 100px;*/
+
 }
 
 .footer-copyright {
