Poging gemaakt om responsieve footer onderaan pagina te krijgen. Overtollige css verwijderd.

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,6 +4,7 @@
     color: #EBF2FF;
     margin-left: -10%;
     width: 110%;
+    padding-bottom: 0;
     /*position: absolute;*/
     /*bottom: 0;*/
     /*left: 0;*/
