--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,21 +1,20 @@
-/** footer **/
-#voetnoot {
-    background-color: #31353D;
-    color: #EBF2FF;
-    margin-left: -10%;
-    width: 110%;
-    padding-bottom: 0;
-    /*position: absolute;*/
-    /*bottom: 0;*/
-    /*left: 0;*/
-    /*height: 180px;*/
-    /*line-height: 100px;*/
+#main {
+    min-height: 100vh;
+    position: relative;
 }
 
 .footer-copyright {
     border-top: 1px solid #464a52;
     background-color: #3A3F48;
     box-shadow: 0px -1px 5px #282c33;
-    margin-left: -10%;
-    width: 120%;
+}
+
+footer {
+    background-color: #31353D;
+    color: #EBF2FF;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    height: 145px;
 }
