--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,20 +1,16 @@
-#main {
-    min-height: 100vh;
-    position: relative;
+/** footer **/
+#voetnoot {
+    background-color: #31353D;
+    color: #EBF2FF;
+    margin-left: -10%;
+    width: 110%;
+    padding-bottom: 0;
 }
 
 .footer-copyright {
     border-top: 1px solid #464a52;
     background-color: #3A3F48;
     box-shadow: 0px -1px 5px #282c33;
-}
-
-footer {
-    background-color: #31353D;
-    color: #EBF2FF;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    height: 145px;
+    margin-left: -10%;
+    width: 120%;
 }
